--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  firebase_core: ^0.4.0+9
-  cloud_firestore: ^0.12.9+5
-  firebase_storage: ^3.1.6
+  firebase_core: "1.2.0"
+  firebase_auth : "^1.2.0"
+  cloud_firestore: ^2.2.0
+  image_picker: ^0.6.5+3
+  firebase_storage: ^8.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
